UKI-648 Fixed dropdown overlap issue in PT data entry

--- a/frontend/web/rainmaker/dev-packages/pt-employee-dev/src/Screens/FormWizardDataEntry/index.scss
+++ b/frontend/web/rainmaker/dev-packages/pt-employee-dev/src/Screens/FormWizardDataEntry/index.scss
@@ -543,6 +543,6 @@ div[class^="MuiPaper-root"],
 }
 
 
-.ownershipType .dropdown, #constructiontype { 
+.ownershipType .dropdown, #constructiontype,#assessment-occupancy { 
   z-index:1000;
 }
